--- a/admin-page/barang.html
+++ b/admin-page/barang.html
@@ -355,24 +355,24 @@
                                         <h4 class="modal-title">Tambah</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <form class="form-horizontal" action="../php/tambah-tahun.php" method="post">
+                                        <form class="form-horizontal" action="" method="post">
                                             <div class="box-body">
                                                 <div class="form-group">
-                                                    <label for="tahun" class="col-sm-3 control-label">dummy</label>
+                                                    <label for="dummy" class="col-sm-3 control-label">dummy</label>
                                                     <div class="col-sm-9">
-                                                        <input type="text" class="form-control" id="tahun"
-                                                            placeholder="tahun" name="tahun">
+                                                        <input type="text" class="form-control" id="dummy"
+                                                            placeholder="dummy" name="dummy">
                                                     </div>
                                                 </div>
 
                                                 <div class="form-group">
-                                                    <label for="semester" class="col-sm-3 control-label">dummy</label>
+                                                    <label for="dummy" class="col-sm-3 control-label">dummy</label>
                                                     <div class="col-sm-9">
-                                                        <select name="semester" class="select2 form-control"
+                                                        <select name="dummy" class="select2 form-control"
                                                             style="width:100%;">
                                                             <option>dummy</option>
-                                                            <option value="semester ganjil">1</option>
-                                                            <option value="semester genap">2</option>
+                                                            <option value="dummy">1</option>
+                                                            <option value="dummy">2</option>
                                                         </select>
                                                     </div>
                                                 </div>
@@ -381,7 +381,7 @@
                                             <!-- /.box-body -->
                                             <div class="box-footer">
                                                 <input type="submit" name="submit" class="btn btn-primary"></a>
-                                                <a href="?page=tahun" class="btn btn-default">Cancel</a>
+                                                <a href="?admin-page=barang" class="btn btn-default">Cancel</a>
                                             </div>
                                             <!-- /.box-footer -->
                                         </form>
@@ -389,7 +389,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- ahkir modal -->
+                        <!-- ahkir modal tambah-->
                         <!-- TABLE -->
                         <div class="row">
                             <div class="col-lg-12">
@@ -413,17 +413,18 @@
                                                 <td>iPhone X 64Gb Grey</td>
                                                 <td>
                                                     <div class="image">
-                                                        <img src="../images/icon/avatar-01.jpg" alt="dummy">
+                                                        <a href="" data-toggle="modal" data-target="#zoom-gambar"><img
+                                                                src="../images/icon/avatar-01.jpg" alt="dummy"></a>
                                                     </div>
                                                 </td>
                                                 <td>hp</td>
                                                 <td>1</td>
                                                 <td>
-                                                    <a href='' class="btn btn-warning btn-sm delete-link">
-                                                        <li class="fa fa-trash"></li> Hapus
-                                                    </a>
                                                     <a href='' class="btn btn-primary btn-sm">
                                                         <li class='fa fa-edit'></li>Update
+                                                    </a>
+                                                    <a href='' class="btn btn-warning btn-sm delete-link">
+                                                        <li class="fa fa-trash"></li> Hapus
                                                     </a>
                                                 </td>
                                             </tr>
@@ -433,17 +434,18 @@
                                                 <td>iPhone X 64Gb Grey</td>
                                                 <td>
                                                     <div class="image">
-                                                        <img src="../images/icon/avatar-01.jpg" alt="dummy">
+                                                        <a href="" data-toggle="modal" data-target="#zoom-gambar"><img
+                                                                src="../images/icon/avatar-01.jpg" alt="dummy"></a>
                                                     </div>
                                                 </td>
                                                 <td>hp</td>
                                                 <td>1</td>
                                                 <td>
-                                                    <a href='' class="btn btn-warning btn-sm delete-link">
-                                                        <li class="fa fa-trash"></li> Hapus
-                                                    </a>
                                                     <a href='' class="btn btn-primary btn-sm">
                                                         <li class='fa fa-edit'></li>Update
+                                                    </a>
+                                                    <a href='' class="btn btn-warning btn-sm delete-link">
+                                                        <li class="fa fa-trash"></li> Hapus
                                                     </a>
                                                 </td>
                                             </tr>
@@ -453,17 +455,18 @@
                                                 <td>iPhone X 64Gb Grey</td>
                                                 <td>
                                                     <div class="image">
-                                                        <img src="../images/icon/avatar-01.jpg" alt="dummy">
+                                                        <a href="" data-toggle="modal" data-target="#zoom-gambar"><img
+                                                                src="../images/icon/avatar-01.jpg" alt="dummy"></a>
                                                     </div>
                                                 </td>
                                                 <td>hp</td>
                                                 <td>1</td>
                                                 <td>
-                                                    <a href='' class="btn btn-warning btn-sm delete-link">
-                                                        <li class="fa fa-trash"></li> Hapus
-                                                    </a>
                                                     <a href='' class="btn btn-primary btn-sm">
                                                         <li class='fa fa-edit'></li>Update
+                                                    </a>
+                                                    <a href='' class="btn btn-warning btn-sm delete-link">
+                                                        <li class="fa fa-trash"></li> Hapus
                                                     </a>
                                                 </td>
                                             </tr>
@@ -473,17 +476,18 @@
                                                 <td>iPhone X 64Gb Grey</td>
                                                 <td>
                                                     <div class="image">
-                                                        <img src="../images/icon/avatar-01.jpg" alt="dummy">
+                                                        <a href="" data-toggle="modal" data-target="#zoom-gambar"><img
+                                                                src="../images/icon/avatar-01.jpg" alt="dummy"></a>
                                                     </div>
                                                 </td>
                                                 <td>hp</td>
                                                 <td>1</td>
                                                 <td>
-                                                    <a href='' class="btn btn-warning btn-sm delete-link">
-                                                        <li class="fa fa-trash"></li> Hapus
-                                                    </a>
                                                     <a href='' class="btn btn-primary btn-sm">
                                                         <li class='fa fa-edit'></li>Update
+                                                    </a>
+                                                    <a href='' class="btn btn-warning btn-sm delete-link">
+                                                        <li class="fa fa-trash"></li> Hapus
                                                     </a>
                                                 </td>
                                             </tr>
@@ -493,17 +497,18 @@
                                                 <td>iPhone X 64Gb Grey</td>
                                                 <td>
                                                     <div class="image">
-                                                        <img src="../images/icon/avatar-01.jpg" alt="dummy">
+                                                        <a href="" data-toggle="modal" data-target="#zoom-gambar"><img
+                                                                src="../images/icon/avatar-01.jpg" alt="dummy"></a>
                                                     </div>
                                                 </td>
                                                 <td>hp</td>
                                                 <td>1</td>
                                                 <td>
-                                                    <a href='' class="btn btn-warning btn-sm delete-link">
-                                                        <li class="fa fa-trash"></li> Hapus
-                                                    </a>
                                                     <a href='' class="btn btn-primary btn-sm">
                                                         <li class='fa fa-edit'></li>Update
+                                                    </a>
+                                                    <a href='' class="btn btn-warning btn-sm delete-link">
+                                                        <li class="fa fa-trash"></li> Hapus
                                                     </a>
                                                 </td>
                                             </tr>
@@ -512,6 +517,21 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- ahkir tabel -->
+                        <!-- modal gambar tabel -->
+                        <div class="modal fade" id="zoom-gambar" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Gambar</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="image"><img src="../images/bg-title-01.jpg" alt="dummy"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- ahkir modal gambar tabel -->
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="copyright">
