--- a/login.html
+++ b/login.html
@@ -49,9 +49,9 @@
                         <div class="login-form">
                             <form action="php/proses-login.php" method="post">
                                 <div class="form-group">
-                                    <label>Email Address</label>
-                                    <input class="au-input au-input--full" type="email" name="email"
-                                        placeholder="Email">
+                                    <label>Username</label>
+                                    <input class="au-input au-input--full" type="text" name="username"
+                                        placeholder="Username">
                                 </div>
                                 <div class="form-group">
                                     <label>Password</label>
