--- a/admin-page/modal-barang.html
+++ b/admin-page/modal-barang.html
@@ -10,20 +10,40 @@
                 <form class="form-horizontal" action="" method="post">
                     <div class="box-body">
                         <div class="form-group">
-                            <label for="dummy" class="col-sm-3 control-label">dummy</label>
+                            <label for="Kode_barang" class="col-sm-4 control-label">Kode barang</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="dummy" placeholder="dummy" name="dummy">
+                                <input type="text" class="form-control" id="Kode_barang" placeholder="Kode barang" name="Kode_barang">
                             </div>
                         </div>
-
                         <div class="form-group">
-                            <label for="dummy" class="col-sm-3 control-label">dummy</label>
+                            <label for="Nama" class="col-sm-3 control-label">Nama</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="Nama" placeholder="Nama" name="Nama">
+                            </div>
+                        </div>
+                        <div class="form-group">                            
+                            <label for="dummy" class="col-sm-3 control-label">Gambar</label>
+                            <div class="col-sm-9">
+                              <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="inputGroupFile02">
+                                <label class="custom-file-label" for="inputGroupFile02">Pilih file</label>
+                              </div>
+                            </div>
+                          </div>
+                        <div class="form-group">
+                            <label for="dummy" class="col-sm-3 control-label">Jenis</label>
                             <div class="col-sm-9">
                                 <select name="dummy" class="select2 form-control" style="width:100%;">
                                     <option>dummy</option>
                                     <option value="dummy">1</option>
                                     <option value="dummy">2</option>
                                 </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="dummy" class="col-sm-3 control-label">Stok</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="dummy" placeholder="dummy" name="dummy">
                             </div>
                         </div>
 
